fix: mvn test errors